# GPSR_planning

./: README.md
bt_nodes/: CMakeLists.txt  package.xml
bt_nodes/include/bt_nodes/: ConvertColor.hpp  Count.hpp  DescribeObject.hpp  DescribePerson.hpp  FindObject.hpp  FindPerson.hpp  FollowPerson.hpp  GuidePerson.hpp  Listen.hpp  LookAround.hpp  LookTo.hpp  MoveTo.hpp  Offer.hpp  PickObject.hpp  PlaceObject.hpp  Query.hpp  RecognizePerson.hpp  Speak.hpp
bt_nodes/src/: ConvertColor.cpp  Count.cpp  DescribeObject.cpp  DescribePerson.cpp  FindObject.cpp  FindPerson.cpp  FollowPerson.cpp  GuidePerson.cpp  Listen.cpp  LookAround.cpp  LookTo.cpp  MoveTo.cpp  Offer.cpp  PickObject.cpp  PlaceObject.cpp  Query.cpp  RecognizePerson.cpp  Speak.cpp
gpsr_bringup/: CMakeLists.txt  package.xml
gpsr_bringup/launch/: llama_ros.launch.py
gpsr_demo/: CMakeLists.txt  package.xml
gpsr_demo/bt_xml/: gpsr_demo.xml
gpsr_demo/commands/: commands.yaml
gpsr_demo/gpsr_demo/: generator_node.py
gpsr_demo/params/: locations.md  names.md  objects.md  rooms.md
gpsr_demo/src/: gpsr_demo.cpp
gpsr_msgs/: CMakeLists.txt  package.xml
gpsr_msgs/action/: ExecutePlan.action
gpsr_msgs/srv/: ExecutePlan.srv  GeneratePlan.srv
gpsr_planning/: README.md  package.xml  setup.cfg  setup.py
gpsr_planning/bt_xml/: answer_quiz.xml  count_object.xml  count_people.xml  describe_person.xml  describe_person_by_name.xml  find_object.xml  find_person.xml  find_person_by_name.xml  follow_person.xml  gpsr_test.xml  guide_person.xml  move_to.xml  move_to_tree.xml  offer_object.xml  pick_object.xml  place_object.xml  quiz.xml  speak.xml  speak_result.xml
gpsr_planning/gpsr_planning/: generate_json.py  gpsr_planner.py  gpsr_planning_node.py
gpsr_planning/params/: generate_robot_actions.py  names.json  nfr_profiles.json  objects.json  places.json  robot_actions.json  robot_actions_template.json  robot_profile.json  waypoints.json
gpsr_planning/test/: commands.json  commands.txt  gpsr_dataset0_eval.json  short.txt
